repository/repository-server/src/test/resources/models/invalid/InvalidLocation9.fbmodel
vortolang 1.0

namespace com.test.extension
version 1.0.0
displayname "InvalidLocation9"
description "Functionblock for Location"

functionblock InvalidLocation9 {
	
	configuration {
	
	}
	
	status {
	  mandatory x as float "Tracks the x axis"
	  mandatory y as float "Tracks the y axis"
	  mandatory z as float "Tracks the z axis"	
	}

}
